# pyseekdb

./: README.md  pyproject.toml
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml
demo/rag/: README.md  README_CN.md  seekdb_app.py  seekdb_utils.py
pyseekdb/: __init__.py
pyseekdb/client/: __init__.py  client_base.py  client_oceanbase_server.py  client_seekdb_embedded.py  client_seekdb_server.py  embedding_function.py
pyseekdb/examples/: comprehensive_example.py  simple_example.py
pyseekdb/tests/: test_admin_database_management.py  test_client_creation.py  test_collection_dml.py  test_collection_embedding_function.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_query.py  test_default_embedding_function.py  test_offical_case.py  test_user_defined_embedding_function.py
seekdbclient/: README.md
seekdbclient/client/: base_connection.py  client_base.py  client_oceanbase_server.py  client_seekdb_embedded.py  client_seekdb_server.py  collection.py  sql_utils.py
seekdbclient/examples/: comprehensive_example.py  simple_example.py
seekdbclient/tests/: test_client_creation.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_query.py
src/pyseekdb/: __init__.py
src/pyseekdb/client/: __init__.py  client_base.py  client_seekdb_server.py  version.py
tests/: test_detect_db_type_and_version.py
