[tool.poetry]
name = "seekdbclient"
version = "0.1.0"
description = "A unified Python client for SeekDB that supports embedded, server, and OceanBase connection modes with vector database capabilities."
authors = ["SeekDBClient Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pymysql = "^1.1.1"
seekdb = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.7"

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
