[tool.poetry]
name = "pyseekdb"
version = "0.1.0.dev5"
description = "A unified Python client for SeekDB that supports embedded, server, and OceanBase."
authors = ["OceanBase <open_oceanbase@oceanbase.com>"]
readme = "README.md"
license = "Apache-2.0"

homepage = "https://github.com/oceanbase/pyseekdb/"
repository = "https://github.com/oceanbase/pyseekdb/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/oceanbase/pyseekdb/issues"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pymysql = "^1.1.1"
pylibseekdb = "*"
sentence-transformers = {version = "*", optional = true}

[tool.poetry.extras]
embedding = ["sentence-transformers"]
all = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.7"

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
